--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SimpleCompass</string>
+    <string name="longitude_range_error">Out of range (-180,180)</string>
+    <string name="latitude_range_error">Out of range (-90,90)</string>
 </resources>
