--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="longitude_range_error">Out of range (-180,180)</string>
     <string name="latitude_range_error">Out of range (-90,90)</string>
     <string name="show_destination_btn_label">SHOW DESTINATION</string>
+    <string name="location_permission_request_title">Location permission</string>
+    <string name="location_permission_request_prompt">This permission is required to get actual device position. Without this data it will be impossible to show destination location.</string>
+    <string name="ok">OK</string>
+    <string name="cancel">CANCEL</string>
+    <string name="request">REQUEST</string>
+    <string name="feature_denied_title">Feature denied</string>
+    <string name="feature_denied_msg">Destination location feature will be disabled since location permission was not granted. Permission can be granted in app settings page.</string>
 </resources>
